# kinect-project

./: CMakeLists.txt  Main2.cpp  Main3.cpp  Person.h  README.md  libfreenect.hpp  main.cpp
